Fix display on narrow browser window, adjust colours

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,8 +4,8 @@ body {
 }
 
 header {
-    background: #4949c3;
-    background: linear-gradient(90deg, #4949c3 0%, #050058 100%);
+    background: #4a5ab2;
+    background: linear-gradient(90deg, #4a5ab2 0%, #22145c 100%);
     color: #ffffff;
     text-align: center;
     padding: 0.1rem;
@@ -46,7 +46,7 @@ section {
 /* Search button */
 #search {
     display: block;
-    background: cornflowerblue;
+    background: #7190dd;
     border: none;
     border-radius: 0.3rem;
     color: #ffffff;
@@ -68,7 +68,7 @@ section {
 }
 
 .recent {
-    background: #999999;
+    background: #aeaeae;
     border-radius: 0.3rem;
     text-align: center;
     padding: 0.6rem;
@@ -104,7 +104,6 @@ section {
 .weather-info dt {
     display: inline-block;
     min-width: 75px;
-    margin-bottom: 0.8rem;
 }
 
 .weather-info dt:after {
@@ -119,6 +118,7 @@ section {
 .weather-info dd:after {
     display: block;
     content: '';
+    margin-bottom: 0.8rem;
 }
 
 /* Forecast Days */
@@ -134,7 +134,7 @@ section {
  }
 
 .forecast-day {
-    background: #06224f;
+    background: #343d4d;
     color: #ffffff;
     padding: 1rem;
     margin-right: 1rem;
